--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link type="text/plain" rel="author" href="/humans.txt" />
     <title>داروگ</title>
   </head>
   <body dir="rtl">
