dev exchange component

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link type="text/plain" rel="author" href="/humans.txt" />
+    <!-- <link rel="stylesheet" type="text/css" href="/src/scrollbar.css" /> -->
     <title>داروگ</title>
   </head>
   <body dir="rtl">
