--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,37 @@
 <!DOCTYPE html>
 <html lang="fa">
   <head>
+    <!-- Najva Push Notification -->
+    <script type="text/javascript">
+      (function() {
+        var now = new Date();
+        var version =
+          now.getFullYear().toString() +
+          '0' +
+          now.getMonth() +
+          '0' +
+          now.getDate() +
+          '0' +
+          now.getHours();
+        var head = document.getElementsByTagName('head')[0];
+        var link = document.createElement('link');
+        link.rel = 'stylesheet';
+        link.href =
+          'https://app.najva.com/static/css/local-messaging.css' +
+          '?v=' +
+          version;
+        head.appendChild(link);
+        var script = document.createElement('script');
+        script.type = 'text/javascript';
+        script.async = true;
+        script.src =
+          'https://app.najva.com/static/js/scripts/sumon-website-19834-e53daf25-b2f1-457f-a1be-4f791ce977df.js' +
+          '?v=' +
+          version;
+        head.appendChild(script);
+      })();
+    </script>
+    <!-- END NAJVA PUSH NOTIFICATION -->
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
@@ -8,18 +39,19 @@
       content="minimum-scale=1, initial-scale=1, width=device-width"
     />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="ثبادل دارو میان داروخانه های کشور" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link type="text/plain" rel="author" href="/humans.txt" />
     <!-- <link rel="stylesheet" type="text/css" href="/src/scrollbar.css" /> -->
     <title>داروگ</title>
   </head>
+  <style>
+    #najva-subscribe-bell {
+      left: 10px !important;
+      bottom: 10px !important;
+    }
+  </style>
   <body dir="rtl">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
