--- a/public/index.html
+++ b/public/index.html
@@ -1,37 +1,6 @@
 <!DOCTYPE html>
 <html lang="fa">
   <head>
-    <!-- Najva Push Notification -->
-    <script type="text/javascript">
-      (function() {
-        var now = new Date();
-        var version =
-          now.getFullYear().toString() +
-          '0' +
-          now.getMonth() +
-          '0' +
-          now.getDate() +
-          '0' +
-          now.getHours();
-        var head = document.getElementsByTagName('head')[0];
-        var link = document.createElement('link');
-        link.rel = 'stylesheet';
-        link.href =
-          'https://app.najva.com/static/css/local-messaging.css' +
-          '?v=' +
-          version;
-        head.appendChild(link);
-        var script = document.createElement('script');
-        script.type = 'text/javascript';
-        script.async = true;
-        script.src =
-          'https://app.najva.com/static/js/scripts/sumon-website-19834-e53daf25-b2f1-457f-a1be-4f791ce977df.js' +
-          '?v=' +
-          version;
-        head.appendChild(script);
-      })();
-    </script>
-    <!-- END NAJVA PUSH NOTIFICATION -->
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
@@ -57,8 +26,43 @@
       bottom: 10px !important;
     }
   </style>
+
   <body dir="rtl">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <!-- Najva Push Notification -->
+    <script type="text/javascript">
+      (function() {
+        var now = new Date();
+        console.log(now);
+        var version =
+          now.getFullYear().toString() +
+          '0' +
+          now.getMonth() +
+          '0' +
+          now.getDate() +
+          '0' +
+          now.getHours();
+        var head = document.getElementsByTagName('head')[0];
+        var link = document.createElement('link');
+        link.rel = 'stylesheet';
+        link.href =
+          'https://app.najva.com/static/css/local-messaging.css' +
+          '?v=' +
+          version;
+        head.appendChild(link);
+        var script = document.createElement('script');
+        script.type = 'text/javascript';
+        script.async = true;
+        script.src =
+          'https://app.najva.com/static/js/scripts/sumon-website-19834-e53daf25-b2f1-457f-a1be-4f791ce977df.js' +
+          '?v=' +
+          version;
+        console.log(script);
+        head.appendChild(script);
+      })();
+    </script>
+    <!-- END NAJVA PUSH NOTIFICATION -->
   </body>
 </html>
