WIP: Add change profile pic

--- a/public/index.html
+++ b/public/index.html
@@ -23,18 +23,22 @@
       rel="stylesheet"
       type="text/css"
       href="css/stimulsoft/stimulsoft.viewer.office2013.whiteblue.css"
+      defer
     />
     <script
       type="text/javascript"
       src="js/stimulsoft/stimulsoft.reports.js"
+      defer
     ></script>
     <script
       type="text/javascript"
       src="js/stimulsoft/stimulsoft.reports.maps.js"
+      defer
     ></script>
     <script
       type="text/javascript"
       src="js/stimulsoft/stimulsoft.viewer.js"
+      defer
     ></script>
   </head>
   <style>
