Fix some issues in error handling

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
       })();
     </script>
     <!-- END NAJVA PUSH NOTIFICATION -->
-    <link
+    <!-- <link
       rel="stylesheet"
       type="text/css"
       href="css/stimulsoft/stimulsoft.viewer.office2013.whiteblue.css"
@@ -70,7 +70,7 @@
       type="text/javascript"
       src="js/stimulsoft/stimulsoft.viewer.js"
       defer
-    ></script>
+    ></script> -->
   </head>
   <style>
     .najva-backdrop-container .najva-powered-by {
