Add cache control to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       content="minimum-scale=1, initial-scale=1, width=device-width"
     />
     <meta name="theme-color" content="#3607a5" />
+    <meta http-equiv="Cache-Control" content="max-age=31536000" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
