--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width"
     />
-    <meta name="theme-color" content="#3607a5" />
+    <!-- <meta name="theme-color" content="#3607a5" /> -->
     <meta http-equiv="Cache-Control" content="max-age=31536000" />
     <link
       rel="stylesheet"
