--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,8 @@
     ></script> -->
   <!-- Hotjar Tracking Code for tabadol.daroog.com -->
   <script>
-    if (window.location.host.startsWith('tabadol')) {
+    (function hotjar() {
+      if (!window.location.host.startsWith('tabadol')) return;
       (function (h, o, t, j, a, r) {
         h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
         h._hjSettings = { hjid: 2382705, hjsv: 6 };
@@ -92,7 +93,6 @@
 
       var version = localStorage.getItem('version') || null
       var user = JSON.parse(localStorage.getItem('user')) || null // Replace your_user_id with your own if available.
-      console.log('USER', user)
       if (user) {
         function parseToken(token) {
           if (!token) return null
@@ -127,7 +127,7 @@
           'version': version
         })
       }
-    }
+    })();
   </script>
 </head>
 <style>
