Fix a typo in Hotjar

--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
         var mainPharmacy = localStorage.getItem('mainPharmacyName') || null // Replace your_user_id with your own if available.
         window.hj('identify', userId, {
           'version': version,
-          'mainPharmacy': mainPharmacyName,
+          'mainPharmacy': mainPharmacy,
           'name': user.name,
           'family': user.family,
           'gender': user.gender,
