--- a/public/index.html
+++ b/public/index.html
@@ -1,63 +1,49 @@
 <!DOCTYPE html>
 <html lang="fa">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/logo2.png" />
+    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
+    <meta name="theme-color" content="#3607a5" />
+    <meta http-equiv="Cache-Control" content="no-cache" />
+    <!-- <meta http-equiv="Cache-Control" content="max-age=31536000" /> -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon"
-        href="%PUBLIC_URL%/logo2.png" />
-  <meta name="viewport"
-        content="minimum-scale=1, initial-scale=1, width=device-width" />
-  <meta name="theme-color"
-        content="#3607a5" />
-  <meta http-equiv="Cache-Control"
-        content="no-cache" />
-  <!-- <meta http-equiv="Cache-Control" content="max-age=31536000" /> -->
-  <link rel="stylesheet"
-        href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-
-  <meta name="description"
-        content="ثبادل دارو میان داروخانه های کشور" />
-  <link rel="apple-touch-icon"
-        href="%PUBLIC_URL%/logo192.png" />
-  <link rel="manifest"
-        href="%PUBLIC_URL%/manifest.json" />
-  <link type="text/plain"
-        rel="author"
-        href="/humans.txt" />
-  <!-- <link rel="stylesheet" type="text/css" href="/src/scrollbar.css" /> -->
-  <title>داروگ</title>
-  <!-- Najva Push Notification -->
-  <script type="text/javascript">
-    (function () {
-      var now = new Date();
-      var version =
-        now.getFullYear().toString() +
-        '0' +
-        now.getMonth() +
-        '0' +
-        now.getDate() +
-        '0' +
-        now.getHours();
-      var head = document.getElementsByTagName('head')[0];
-      var link = document.createElement('link');
-      link.rel = 'stylesheet';
-      link.href =
-        'https://app.najva.com/static/css/local-messaging.css' +
-        '?v=' +
-        version;
-      head.appendChild(link);
-      var script = document.createElement('script');
-      script.type = 'text/javascript';
-      script.async = true;
-      script.src =
-        'https://app.najva.com/static/js/scripts/sumon-website-19834-e53daf25-b2f1-457f-a1be-4f791ce977df.js' +
-        '?v=' +
-        version;
-      head.appendChild(script);
-    })();
-  </script>
-  <!-- END NAJVA PUSH NOTIFICATION -->
-  <!-- <link
+    <meta name="description" content="ثبادل دارو میان داروخانه های کشور" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link type="text/plain" rel="author" href="/humans.txt" />
+    <!-- <link rel="stylesheet" type="text/css" href="/src/scrollbar.css" /> -->
+    <title>داروگ</title>
+    <!-- Najva Push Notification -->
+    <script type="text/javascript">
+      (function () {
+        var now = new Date();
+        var version =
+          now.getFullYear().toString() +
+          '0' +
+          now.getMonth() +
+          '0' +
+          now.getDate() +
+          '0' +
+          now.getHours();
+        var head = document.getElementsByTagName('head')[0];
+        var link = document.createElement('link');
+        link.rel = 'stylesheet';
+        link.href = 'https://app.najva.com/static/css/local-messaging.css' + '?v=' + version;
+        head.appendChild(link);
+        var script = document.createElement('script');
+        script.type = 'text/javascript';
+        script.async = true;
+        script.src =
+          'https://app.najva.com/static/js/scripts/sumon-website-19834-e53daf25-b2f1-457f-a1be-4f791ce977df.js' +
+          '?v=' +
+          version;
+        head.appendChild(script);
+      })();
+    </script>
+    <!-- END NAJVA PUSH NOTIFICATION -->
+    <!-- <link
       rel="stylesheet"
       type="text/css"
       href="css/stimulsoft/stimulsoft.viewer.office2013.whiteblue.css"
@@ -78,67 +64,85 @@
       src="js/stimulsoft/stimulsoft.viewer.js"
       defer
     ></script> -->
-  <!-- Hotjar Tracking Code for tabadol.daroog.com -->
-  <script>
-    (function hotjar() {
-      if (!window.location.host.startsWith('tabadol')) return;
-      (function (h, o, t, j, a, r) {
-        h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
-        h._hjSettings = { hjid: 2382705, hjsv: 6 };
-        a = o.getElementsByTagName('head')[0];
-        r = o.createElement('script'); r.async = 1;
-        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-        a.appendChild(r);
-      })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    <!-- Hotjar Tracking Code for tabadol.daroog.com -->
+    <script>
+      (function hotjar() {
+        if (!window.location.host.startsWith('tabadol')) return;
+        (function (h, o, t, j, a, r) {
+          h.hj =
+            h.hj ||
+            function () {
+              (h.hj.q = h.hj.q || []).push(arguments);
+            };
+          h._hjSettings = { hjid: 2382705, hjsv: 6 };
+          a = o.getElementsByTagName('head')[0];
+          r = o.createElement('script');
+          r.async = 1;
+          r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+          a.appendChild(r);
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
 
-      var version = localStorage.getItem('version') || null
-      var user = JSON.parse(localStorage.getItem('user')) || null // Replace your_user_id with your own if available.
-      if (user) {
-        function parseToken(token) {
-          if (!token) return null
-          const base64Url = token.split('.')[1]
-          const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/')
-          const jsonPayload = decodeURIComponent(atob(base64).split('').map(function (c) {
-            return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2)
-          }).join(''))
+        var version = localStorage.getItem('version') || null;
+        var user = JSON.parse(localStorage.getItem('user')) || null; // Replace your_user_id with your own if available.
+        if (user) {
+          function parseToken(token) {
+            if (!token) return null;
+            const base64Url = token.split('.')[1];
+            const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+            const jsonPayload = decodeURIComponent(
+              atob(base64)
+                .split('')
+                .map(function (c) {
+                  return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+                })
+                .join('')
+            );
 
-          return JSON.parse(jsonPayload)
+            return JSON.parse(jsonPayload);
+          }
+          var token = parseToken(localStorage.getItem('mainToken'));
+          var userId =
+            token['http://schemas.xmlsoap.org/ws/2005/05/identity/claims/nameidentifier'] || null;
+          var roles = token['http://schemas.microsoft.com/ws/2008/06/identity/claims/role'] || null;
+          var mainPharmacy = localStorage.getItem('mainPharmacyName') || null; // Replace your_user_id with your own if available.
+          window.hj('identify', userId, {
+            version: version,
+            mainPharmacy: mainPharmacy,
+            name: user.name,
+            family: user.family,
+            gender: user.gender,
+            roles: roles,
+            // Add your own custom attributes here. Some EXAMPLES:
+            // 'Signed up': '2019—06-20Z', // Signup date in ISO-8601 format.
+            // 'Last purchase category': 'Electronics', // Send strings with quotes around them.
+            // 'Total purchases': 15, // Send numbers without quotes.
+            // 'Last purchase date': '2019-06-20Z', // Send dates in ISO-8601 format.
+            // 'Last refund date': null, // Send null when no value exists for a user.
+          });
+        } else {
+          window.hj('identify', null, {
+            version: version,
+          });
         }
-        var token = parseToken(localStorage.getItem('mainToken'))
-        var userId = token['http://schemas.xmlsoap.org/ws/2005/05/identity/claims/nameidentifier'] || null
-        var roles = token['http://schemas.microsoft.com/ws/2008/06/identity/claims/role'] || null
-        var mainPharmacy = localStorage.getItem('mainPharmacyName') || null // Replace your_user_id with your own if available.
-        window.hj('identify', userId, {
-          'version': version,
-          'mainPharmacy': mainPharmacy,
-          'name': user.name,
-          'family': user.family,
-          'gender': user.gender,
-          'roles': roles,
-          // Add your own custom attributes here. Some EXAMPLES:
-          // 'Signed up': '2019—06-20Z', // Signup date in ISO-8601 format.
-          // 'Last purchase category': 'Electronics', // Send strings with quotes around them.
-          // 'Total purchases': 15, // Send numbers without quotes.
-          // 'Last purchase date': '2019-06-20Z', // Send dates in ISO-8601 format.
-          // 'Last refund date': null, // Send null when no value exists for a user.
-        })
-      } else {
-        window.hj('identify', null, {
-          'version': version
-        })
-      }
-    })();
-  </script>
-</head>
-<style>
-  .najva-backdrop-container .najva-powered-by {
-    display: none !important;
-  }
-</style>
+      })();
+    </script>
+  </head>
+  <style>
+    .najva-backdrop-container .najva-powered-by {
+      display: none !important;
+    }
+  </style>
 
-<body dir="rtl">
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-</body>
-
+  <body dir="rtl">
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
+  <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+  />
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.css"
+  />
 </html>
