--- a/public/index.html
+++ b/public/index.html
@@ -137,12 +137,8 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
-  <link
-    rel="stylesheet"
-    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-  />
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.css"
-  />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.70/dist/L.Control.Locate.min.css" />
+  
+  <script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.70/dist/L.Control.Locate.min.js" charset="utf-8"></script>
 </html>
